--- a/_bibliography/preprint.bib
+++ b/_bibliography/preprint.bib
@@ -1,69 +1,31 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@article{anastasopoulos2020tico,
+  abbr={arXiv},
+  title={TICO-19: the Translation Initiative for Covid-19},
+  author={Anastasopoulos, Antonios and Cattelan, Alessandro and Dou, Zi-Yi and Federico, Marcello and Federman, Christian and Genzel, Dmitriy and Guzm{\'a}n, Francisco and Hu, Junjie and Hughes, Macduff and Koehn, Philipp and others},
+  journal={arXiv preprint arXiv:2007.01788},
+  year={2020},
+  url = "https://tico-19.github.io/data/paper/ticopaper.pdf",
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+
+@article{chaudhary2019ariel,
+  abbr = "arXiv",
+  url = "https://arxiv.org/pdf/1902.08899.pdf",
+  title={The ARIEL-CMU systems for LoReHLT18},
+  author={Chaudhary, Aditi and Dalmia, Siddharth and Hu, Junjie and Li, Xinjian and Matthews, Austin and Muis, Aldrian Obaja and Otani, Naoki and Rijhwani, Shruti and Sheikh, Zaid and Vyas, Nidhi and others},
+  journal={arXiv preprint arXiv:1902.08899},
+  year={2019}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{zhao2017principled,
+  abbr = "arXiv",
+  url = "https://arxiv.org/pdf/1705.09011.pdf",
+  title={Principled hybrids of generative and discriminative domain adaptation},
+  author={Zhao, Han and Zhu, Zhenyao and Hu, Junjie and Coates, Adam and Gordon, Geoff},
+  journal={arXiv preprint arXiv:1705.09011},
+  year={2017}
 }
