--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -273,7 +273,7 @@
 }
 
 @inproceedings{hu2017answer,
-  abbr = "AAAISymp",
+  abbr = "AAAI",
   url = "https://www.ttic.edu/nchrc/papers/27.pdf",
   title={Answer-aware attention on grounded question answering in images},
   author={Hu, Junjie and Fan, Desai and Yao, Shuxin and Oh, Jean},
