--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -41,6 +41,36 @@
     abstract = "Unsupervised machine translation (MT) has recently achieved impressive results with monolingual corpora only. However, it is still challenging to associate source-target sentences in the latent space. As people speak different languages biologically share similar visual systems, the potential of achieving better alignment through visual content is promising yet under-explored in unsupervised multimodal MT (MMT). In this paper, we investigate how to utilize visual content for disambiguation and promoting latent space alignment in unsupervised MMT. Our model employs multimodal back-translation and features pseudo visual pivoting in which we learn a shared multilingual visual-semantic embedding space and incorporate visually-pivoted captioning as additional weak supervision. The experimental results on the widely used Multi30K dataset show that the proposed model significantly improves over the state-of-the-art methods and generalizes well when images are not available at the testing time.",
 }
 
+@inproceedings{anastasopoulos-etal-2020-tico,
+    abbr={Workshop},
+    title = "{TICO}-19: the Translation Initiative for {CO}vid-19",
+    author = {Anastasopoulos, Antonios  and
+      Cattelan, Alessandro  and
+      Dou, Zi-Yi  and
+      Federico, Marcello  and
+      Federmann, Christian  and
+      Genzel, Dmitriy  and
+      Guzm{\'a}n, Franscisco  and
+      Hu, Junjie  and
+      Hughes, Macduff  and
+      Koehn, Philipp  and
+      Lazar, Rosie  and
+      Lewis, Will  and
+      Neubig, Graham  and
+      Niu, Mengmeng  and
+      {\"O}ktem, Alp  and
+      Paquin, Eric  and
+      Tang, Grace  and
+      Tur, Sylwia},
+    booktitle = "Proceedings of the 1st Workshop on {NLP} for {COVID}-19 (Part 2) at {EMNLP}",
+    month = dec,
+    year = "2020",
+    address = "Online",
+    publisher = "Association for Computational Linguistics",
+    url = "https://www.aclweb.org/anthology/2020.nlpcovid19-2.5",
+    abstract = "The COVID-19 pandemic is the worst pandemic to strike the world in over a century. Crucial to stemming the tide of the SARS-CoV-2 virus is communicating to vulnerable populations the means by which they can protect themselves. To this end, the collaborators forming the Translation Initiative for COvid-19 (TICO-19) have made test and development data available to AI and MT researchers in 35 different languages in order to foster the development of tools and resources for improving access to information about COVID-19 in these languages. In addition to 9 high-resourced, {''}pivot{''} languages, the team is targeting 26 lesser resourced languages, in particular languages of Africa, South Asia and South-East Asia, whose populations may be the most vulnerable to the spread of the virus. The same data is translated into all of the languages represented, meaning that testing or development can be done for any pairing of languages in the set. Further, the team is converting the test and development data into translation memories (TMXs) that can be used by localizers from and to any of the languages.",
+}
+
 @inproceedings{hu20aaai,
     abbr = "AAAI",
     code = "https://github.com/JunjieHu/ReCo-RL",
