--- a/_bibliography/preprint.bib
+++ b/_bibliography/preprint.bib
@@ -2,15 +2,14 @@
 ---
 
 
-@article{anastasopoulos2020tico,
+@article{hu2020explicit,
   abbr={arXiv},
-  title={TICO-19: the Translation Initiative for Covid-19},
-  author={Anastasopoulos, Antonios and Cattelan, Alessandro and Dou, Zi-Yi and Federico, Marcello and Federman, Christian and Genzel, Dmitriy and Guzm{\'a}n, Francisco and Hu, Junjie and Hughes, Macduff and Koehn, Philipp and others},
-  journal={arXiv preprint arXiv:2007.01788},
+  title={Explicit Alignment Objectives for Multilingual Bidirectional Encoders},
+  author={Hu, Junjie and Johnson, Melvin and Firat, Orhan and Siddhant, Aditya and Neubig, Graham},
+  journal={arXiv preprint arXiv:2010.07972},
   year={2020},
-  url = "https://tico-19.github.io/data/paper/ticopaper.pdf",
+  url = "https://arxiv.org/pdf/2010.07972.pdf",
 }
-
 
 @article{chaudhary2019ariel,
   abbr = "arXiv",
