--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,26 @@
 ---
 ---
 
+@inproceedings{hu21explicit,
+  abbr={NAACL},
+  title={Explicit Alignment Objectives for Multilingual Bidirectional Encoders},
+  author={Hu, Junjie and Johnson, Melvin and Firat, Orhan and Siddhant, Aditya and Neubig, Graham},
+  booktitle = {Proceedings of the 2021 Conference of the North {A}merican Chapter of the Association for Computational Linguistics (Demonstrations)},
+  year={2021},
+  month = {June},
+  url = "https://arxiv.org/pdf/2010.07972.pdf",
+}
+
+@inproceedings{huang21visionlang,
+  abbr={NAACL},
+  title={Multilingual Multimodal Pre-training for Zero-Shot Cross-Lingual Transfer of Vision-Language Models},
+  author={Po-Yao Huang and Mandela Patrick and Junjie Hu and Graham Neubig and Florian Metze and Alexander Hauptmann},
+  booktitle = {Proceedings of the 2021 Conference of the North {A}merican Chapter of the Association for Computational Linguistics (Demonstrations)},
+  year={2021},
+  month = {June},
+  url = "https://openreview.net/pdf?id=XC-PgiyCwj3",
+}
+
 @inproceedings{hu20icml,
     abbr = "ICML",
     code = "https://github.com/google-research/xtreme",
