--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,12 @@
 ---
 ---
 
+
 @inproceedings{hu21explicit,
   abbr={NAACL},
   title={Explicit Alignment Objectives for Multilingual Bidirectional Encoders},
   author={Hu, Junjie and Johnson, Melvin and Firat, Orhan and Siddhant, Aditya and Neubig, Graham},
-  booktitle = {Proceedings of the 2021 Conference of the North {A}merican Chapter of the Association for Computational Linguistics (Demonstrations)},
+  booktitle = {Proceedings of the 2021 Conference of the North {A}merican Chapter of the Association for Computational Linguistics},
   year={2021},
   month = {June},
   url = "https://arxiv.org/pdf/2010.07972.pdf",
@@ -15,7 +16,7 @@
   abbr={NAACL},
   title={Multilingual Multimodal Pre-training for Zero-Shot Cross-Lingual Transfer of Vision-Language Models},
   author={Po-Yao Huang and Mandela Patrick and Junjie Hu and Graham Neubig and Florian Metze and Alexander Hauptmann},
-  booktitle = {Proceedings of the 2021 Conference of the North {A}merican Chapter of the Association for Computational Linguistics (Demonstrations)},
+  booktitle = {Proceedings of the 2021 Conference of the North {A}merican Chapter of the Association for Computational Linguistics},
   year={2021},
   month = {June},
   url = "https://openreview.net/pdf?id=XC-PgiyCwj3",
