--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,25 +1,25 @@
 ---
 ---
 
-
 @inproceedings{hu21explicit,
-  abbr={NAACL},
-  title={Explicit Alignment Objectives for Multilingual Bidirectional Encoders},
-  author={Hu, Junjie and Johnson, Melvin and Firat, Orhan and Siddhant, Aditya and Neubig, Graham},
-  booktitle = {Proceedings of the 2021 Conference of the North {A}merican Chapter of the Association for Computational Linguistics},
-  year={2021},
-  month = {June},
-  url = "https://arxiv.org/pdf/2010.07972.pdf",
+    abbr = "NAACL",
+    selected = "1", 
+    title = {Explicit Alignment Objectives for Multilingual Bidirectional Encoders},
+    author = {Hu, Junjie and Johnson, Melvin and Firat, Orhan and Siddhant, Aditya and Neubig, Graham},
+    booktitle = {Proceedings of the 2021 Conference of the North {A}merican Chapter of the Association for Computational Linguistics},
+    month = {June},
+    url = {https://arxiv.org/pdf/2010.07972.pdf},
+    year = {2021}
 }
 
 @inproceedings{huang21visionlang,
-  abbr={NAACL},
-  title={Multilingual Multimodal Pre-training for Zero-Shot Cross-Lingual Transfer of Vision-Language Models},
-  author={Po-Yao Huang and Mandela Patrick and Junjie Hu and Graham Neubig and Florian Metze and Alexander Hauptmann},
+  abbr = "NAACL",
+  title = {Multilingual Multimodal Pre-training for Zero-Shot Cross-Lingual Transfer of Vision-Language Models},
+  author = {Po-Yao Huang and Mandela Patrick and Junjie Hu and Graham Neubig and Florian Metze and Alexander Hauptmann},
   booktitle = {Proceedings of the 2021 Conference of the North {A}merican Chapter of the Association for Computational Linguistics},
-  year={2021},
+  year = {2021},
   month = {June},
-  url = "https://openreview.net/pdf?id=XC-PgiyCwj3",
+  url = "https://openreview.net/pdf?id=XC-PgiyCwj3"
 }
 
 @inproceedings{hu20icml,
@@ -228,6 +228,7 @@
 @inproceedings{neubig-etal-2019-compare,
     abbr = "NAACL",
     code = "https://github.com/neulab/compare-mt",
+    award = "Best Demon Nomination",
     video = "https://youtu.be/NyJEQT7t2CA",
     title = "compare-mt: A Tool for Holistic Comparison of Language Generation Systems",
     author = "Neubig, Graham  and
