--- a/_bibliography/preprint.bib
+++ b/_bibliography/preprint.bib
@@ -1,6 +1,15 @@
 ---
 ---
 
+@article{Ding2021GlobalWoZGM,
+  abbr = "arXiv",
+  url = "https://arxiv.org/abs/2110.07679",
+  title={GlobalWoZ: Globalizing MultiWoZ to Develop Multilingual Task-Oriented Dialogue Systems},
+  author={Bosheng Ding and Junjie Hu and Lidong Bing and Sharifah Aljunied Mahani and Shafiq R. Joty and Luo Si and Chunyan Miao},
+  year={2021},
+  journal={arXiv preprint arXiv:2110.07679}
+}
+
 @article{chaudhary2019ariel,
   abbr = "arXiv",
   url = "https://arxiv.org/pdf/1902.08899.pdf",
