--- a/_bibliography/preprint.bib
+++ b/_bibliography/preprint.bib
@@ -1,5 +1,13 @@
 ---
 ---
+@article{hu2021Deep,
+  abbr = "arXiv",
+  url = "https://arxiv.org/abs/2111.07393",
+  title = {DEEP: DEnoising Entity Pre-training for Neural Machine Translation},
+  author = {Junjie Hu and Hiroaki Hayashi and Kyunghyun Cho and Graham Neubig},
+  year = {2021},
+  journal={arXiv preprint arXiv:2111.07393}
+}
 
 @article{Ding2021GlobalWoZGM,
   abbr = "arXiv",
