--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,18 @@
 ---
 ---
+
+@inproceedings{hu2022Deep,
+  abbr = "ACL",
+  url = "https://arxiv.org/abs/2111.07393",
+  title = {DEEP: DEnoising Entity Pre-training for Neural Machine Translation},
+  author = {Junjie Hu and Hiroaki Hayashi and Kyunghyun Cho and Graham Neubig},
+  booktitle = "Proceedings of the 58th Annual Meeting of the Association for Computational Linguistics",
+  month = jul,
+  year = "2022",
+  address = "Online",
+  publisher = "Association for Computational Linguistics",
+}
+
 @inproceedings{hu21wmt,
     abbr = "WMT",
     title = {Phrase-level Active Learning for Neural Machine Translation},
