--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,6 +13,18 @@
   publisher = "Association for Computational Linguistics",
 }
 
+@inproceedings{Ding2021GlobalWoZGM,
+  abbr = "ACL",
+  url = "https://arxiv.org/abs/2110.07679",
+  title={GlobalWoZ: Globalizing MultiWoZ to Develop Multilingual Task-Oriented Dialogue Systems},
+  author={Bosheng Ding and Junjie Hu and Lidong Bing and Sharifah Aljunied Mahani and Shafiq R. Joty and Luo Si and Chunyan Miao},
+  booktitle = "Proceedings of the 58th Annual Meeting of the Association for Computational Linguistics",
+  month = jul,
+  year = "2022",
+  address = "Online",
+  publisher = "Association for Computational Linguistics",
+}
+
 @inproceedings{hu21wmt,
     abbr = "WMT",
     title = {Phrase-level Active Learning for Neural Machine Translation},
