--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @inproceedings{hu2022Deep,
   abbr = "ACL",
-  url = "https://arxiv.org/abs/2111.07393",
+  url = "https://aclanthology.org/2022.acl-long.123.pdf",
   title = {DEEP: DEnoising Entity Pre-training for Neural Machine Translation},
   author = {Junjie Hu and Hiroaki Hayashi and Kyunghyun Cho and Graham Neubig},
   booktitle = "Proceedings of the 58th Annual Meeting of the Association for Computational Linguistics",
@@ -15,7 +15,7 @@
 
 @inproceedings{Ding2021GlobalWoZGM,
   abbr = "ACL",
-  url = "https://arxiv.org/abs/2110.07679",
+  url = "https://aclanthology.org/2022.acl-long.115.pdf",
   title={GlobalWoZ: Globalizing MultiWoZ to Develop Multilingual Task-Oriented Dialogue Systems},
   author={Bosheng Ding and Junjie Hu and Lidong Bing and Sharifah Aljunied Mahani and Shafiq R. Joty and Luo Si and Chunyan Miao},
   booktitle = "Proceedings of the 58th Annual Meeting of the Association for Computational Linguistics",
@@ -86,7 +86,7 @@
   booktitle = {Proceedings of the 2021 Conference of the North {A}merican Chapter of the Association for Computational Linguistics},
   year = {2021},
   month = {June},
-  url = "https://openreview.net/pdf?id=XC-PgiyCwj3",
+  url = "https://aclanthology.org/2021.naacl-main.195.pdf",
   abstract = "This paper studies zero-shot cross-lingual transfer of vision-language models. Specifically, we focus on multilingual text-to-video search and propose a Transformer-based model that learns contextual multilingual multimodal embeddings. Under a zero-shot setting, we empirically demonstrate that performance degrades significantly when we query the multilingual text-video model with non-English sentences. To address this problem, we introduce a multilingual multimodal pre-training strategy, and collect a new multilingual instructional video dataset (Multi-HowTo100M) for pre-training. Experiments on VTT show that our method significantly improves video search in non-English languages without additional annotations. Furthermore, when multilingual annotations are available, our method outperforms recent baselines by a large margin in multilingual text-to-video search on VTT and VATEX; as well as in multilingual text-to-image search on Multi30K. Our model and Multi-HowTo100M is available at http://github.com/berniebear/Multi-HT100M.",
   code = "http://github.com/berniebear/Multi-HT100M"
 }
@@ -110,7 +110,7 @@
     author = {Zhao, Han and Hu, Junjie and Risteski,  Andrej},
     booktitle = {International Conference on Machine Learning (ICML)},
     month = {July},
-    url = {},
+    url = {http://proceedings.mlr.press/v119/zhao20b/zhao20b.pdf},
     year = {2020},
     abstract = "The goal of universal machine translation is to learn to translate between any pair of languages, given a corpus of paired translated documents for \emph{a small subset} of all pairs of languages. Despite impressive empirical results and an increasing interest in massively multilingual models, theoretical analysis on translation errors made by such universal machine translation models is only nascent. In this paper, we formally prove certain impossibilities of this endeavour in general, as well as prove positive results in the presence of additional (but natural) structure of data. For the former, we derive a lower bound on the translation error in the many-to-many translation setting, which shows that any algorithm aiming to learn shared sentence representations among multiple language pairs has to make a large translation error on at least one of the translation tasks, if no assumption on the structure of the languages is made. For the latter, we show that if the paired documents in the corpus follow a natural \emph{encoder-decoder} generative process, we can expect a natural notion of ``generalization'': a linear number of language pairs, rather than quadratic, suffices to learn a good representation. Our theory also explains what kinds of connection graphs between pairs of languages are better suited: ones with longer paths result in worse sample complexity in terms of the total number of documents per language pair needed. We believe our theoretical insights and implications contribute to the future algorithmic design of universal machine translation."
 }
