--- a/_bibliography/preprint.bib
+++ b/_bibliography/preprint.bib
@@ -2,13 +2,22 @@
 ---
 
 
-@article{Ding2021GlobalWoZGM,
+@article{sreedhar2022,
   abbr = "arXiv",
-  url = "https://arxiv.org/abs/2110.07679",
-  title={GlobalWoZ: Globalizing MultiWoZ to Develop Multilingual Task-Oriented Dialogue Systems},
-  author={Bosheng Ding and Junjie Hu and Lidong Bing and Sharifah Aljunied Mahani and Shafiq R. Joty and Luo Si and Chunyan Miao},
-  year={2021},
-  journal={arXiv preprint arXiv:2110.07679}
+  url = "https://arxiv.org/pdf/2205.11490.pdf",
+  title={Local Byte Fusion for Neural Machine Translation},
+  author={Sreedhar, Makesh Narsimhan, and Wan, Xiangpeng, and Cheng, Yu, and Hu, Junjie},
+  year={2022},
+  journal={arXiv preprint arXiv:2205.11490}
+}
+
+@article{Dinh2022UtilizingLP,
+  abbr = "arXiv",
+  url = "https://arxiv.org/pdf/2205.11616.pdf",
+  title={Utilizing Language-Image Pretraining for Efficient and Robust Bilingual Word Alignment},
+  author={Tuan Dinh and Jy-yong Sohn and Shashank Rajput and Timothy Ossowski and Yifei Ming and Junjie Hu and Dimitris Papailiopoulos and Kangwook Lee},
+  year={2022},
+  journal={arXiv preprint arXiv:2205.11616}
 }
 
 @article{chaudhary2019ariel,
