--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,20 @@
 ---
 ---
 
+@article{li2022vpumn,
+  abbr={IEEE TPAMI},
+  title={Video Pivoting Unsupervised Multi-modal Neural
+Machine Translation},
+  author={Li, Mingjie, and Huang, Po-Yao, and Chang, Xiaojun, and Hu, Junjie, and Yang, Yi, and Hauptmann, Alex},
+  journal={IEEE transactions on pattern analysis and machine intelligence (To Appear)},
+  volume={29},
+  number={4},
+  pages={882--895},
+  year={2022},
+  publisher={IEEE},
+}
+
+
 @inproceedings{hu2022Deep,
   abbr = "ACL",
   url = "https://aclanthology.org/2022.acl-long.123.pdf",
