--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,15 @@
 ---
 ---
 
+@inproceedings{Dinh2022UtilizingLP,
+  abbr = "EMNLP",
+  url = "https://arxiv.org/pdf/2205.11616.pdf",
+  title={Utilizing Language-Image Pretraining for Efficient and Robust Bilingual Word Alignment},
+  author={Tuan Dinh and Jy-yong Sohn and Shashank Rajput and Timothy Ossowski and Yifei Ming and Junjie Hu and Dimitris Papailiopoulos and Kangwook Lee},
+  year={2022},
+  booktitle = {Proceedings of the 2022 Conference on Empirical Methods in Natural Language Processing (EMNLP Findings)},
+}
+
 @article{li2022vpumn,
   abbr={IEEE TPAMI},
   title={Video Pivoting Unsupervised Multi-modal Neural
