--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,7 @@
   author={Tuan Dinh and Jy-yong Sohn and Shashank Rajput and Timothy Ossowski and Yifei Ming and Junjie Hu and Dimitris Papailiopoulos and Kangwook Lee},
   year={2022},
   booktitle = {Proceedings of the 2022 Conference on Empirical Methods in Natural Language Processing (EMNLP Findings)},
+  publisher = "Association for Computational Linguistics",
 }
 
 @article{li2022vpumn,
