--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,17 @@
 
 @inproceedings{Dinh2022UtilizingLP,
   abbr = "EMNLP",
+  url = "",
+  title={Beyond Counting Datasets: Investigating Multilingual Dataset Construction and Necessary Resources},
+  author={Xinyan Yu and Trina Chatterjee and Akari Asai and Junjie Hu and Eunsol Choi},
+  year={2022},
+  booktitle = {Proceedings of the 2022 Conference on Empirical Methods in Natural Language Processing (EMNLP Findings)},
+  publisher = "Association for Computational Linguistics",
+}
+
+
+@inproceedings{Dinh2022UtilizingLP,
+  abbr = "EMNLP",
   url = "https://arxiv.org/pdf/2205.11616.pdf",
   title={Utilizing Language-Image Pretraining for Efficient and Robust Bilingual Word Alignment},
   author={Tuan Dinh and Jy-yong Sohn and Shashank Rajput and Timothy Ossowski and Yifei Ming and Junjie Hu and Dimitris Papailiopoulos and Kangwook Lee},
