--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,44 @@
 ---
 ---
 
+
+@inproceedings{rheeya2023,
+  abbr = "ACL",
+  title={Single Sequence Prediction over Reasoning Graphs for Multi-hop QA},
+  author={Gowtham Ramesh and Makesh Narsimhan Sreedhar and Junjie Hu},
+  booktitle = "Proceedings of the 59th Annual Meeting of the Association for Computational Linguistics",
+  year = "2023",
+  publisher = "Association for Computational Linguistics",
+}
+
+@inproceedings{rheeya2023,
+  abbr = "ACL",
+  title={Is Fine-tuning Needed? Pre-trained Language Models Are Near Perfect for Out-of-Domain Detection},
+  author={Rheeya Uppaal and Junjie Hu and Yixuan Li},
+  booktitle = "Proceedings of the 59th Annual Meeting of the Association for Computational Linguistics",
+  year = "2023",
+  publisher = "Association for Computational Linguistics",
+}
+
+@inproceedings{sreedhar2022,
+  abbr = "ACL",
+  url = "https://arxiv.org/pdf/2205.11490.pdf",
+  title={Local Byte Fusion for Neural Machine Translation},
+  author={Sreedhar, Makesh Narsimhan, and Wan, Xiangpeng, and Cheng, Yu, and Hu, Junjie},
+  booktitle = "Proceedings of the 59th Annual Meeting of the Association for Computational Linguistics",
+  year = "2023",
+  publisher = "Association for Computational Linguistics",
+}
+
+@inproceedings{rheeya2023,
+  abbr = "ACL",
+  title={Multimodal Prompt Retrieval for Generative Visual Question Answering},
+  author={Timothy Ossowski and Junjie Hu},
+  booktitle = "Proceedings of the 59th Annual Meeting of the Association for Computational Linguistics (ACL Findings)",
+  year = "2023",
+  publisher = "Association for Computational Linguistics",
+}
+
 @inproceedings{Dinh2022UtilizingLP,
   abbr = "EMNLP",
   url = "",
