--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
 @inproceedings{rheeya2023,
   abbr = "ACL",
   title={Single Sequence Prediction over Reasoning Graphs for Multi-hop QA},
-  author={Gowtham Ramesh and Makesh Narsimhan Sreedhar and Junjie Hu},
+  author={Gowtham Ramesh, Makesh Narsimhan Sreedhar and Junjie Hu},
   booktitle = "Proceedings of the 59th Annual Meeting of the Association for Computational Linguistics",
   year = "2023",
   publisher = "Association for Computational Linguistics",
@@ -14,7 +14,7 @@
 @inproceedings{rheeya2023,
   abbr = "ACL",
   title={Is Fine-tuning Needed? Pre-trained Language Models Are Near Perfect for Out-of-Domain Detection},
-  author={Rheeya Uppaal and Junjie Hu and Yixuan Li},
+  author={Rheeya Uppaal, Junjie Hu and Yixuan Li},
   booktitle = "Proceedings of the 59th Annual Meeting of the Association for Computational Linguistics",
   year = "2023",
   publisher = "Association for Computational Linguistics",
