--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,16 @@
 ---
 ---
 
+@inproceedings{lucscw2023,
+  abbr = "CSCW",
+  title={MetaWriter: Exploring the Potential and Perils of AI Writing Support in Scientific Peer Review},
+  author={Lu Sun, Stone Tao, Junjie Hu and Steven P. Dow},
+  booktitle = "Proceedings of The 26th ACM Conference on Computer-Supported Cooperative Work and Social Computing",
+  year = "2023",
+  publisher = "ACM",
+}
+
+
 
 @inproceedings{rheeya2023,
   abbr = "ACL",
