--- a/_bibliography/preprint.bib
+++ b/_bibliography/preprint.bib
@@ -1,14 +1,13 @@
 ---
 ---
 
-
 @article{sreedhar2022,
   abbr = "arXiv",
-  url = "https://arxiv.org/pdf/2205.11490.pdf",
-  title={Local Byte Fusion for Neural Machine Translation},
-  author={Sreedhar, Makesh Narsimhan, and Wan, Xiangpeng, and Cheng, Yu, and Hu, Junjie},
-  year={2022},
-  journal={arXiv preprint arXiv:2205.11490}
+  url = "https://arxiv.org/pdf/2305.14328.pdf",
+  title={Empowering LLM-based Machine Translation with Cultural Awareness},
+  author={Binwei Yao, Ming Jiang, Diyi Yang and Junjie Hu },
+  year={2023},
+  journal={arXiv preprint arXiv:2305.14328}
 }
 
 @article{chaudhary2019ariel,
