--- a/_bibliography/preprint.bib
+++ b/_bibliography/preprint.bib
@@ -1,7 +1,7 @@
 ---
 ---
 
-@article{sreedhar2022,
+@article{binwei2023,
   abbr = "arXiv",
   url = "https://arxiv.org/pdf/2305.14328.pdf",
   title={Empowering LLM-based Machine Translation with Cultural Awareness},
