--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,10 +1,10 @@
 ---
 ---
 
-@inproceedings{lucscw2023,
+@inproceedings{lu2023,
   abbr = "CSCW",
   title={MetaWriter: Exploring the Potential and Perils of AI Writing Support in Scientific Peer Review},
-  author={Lu Sun, Stone Tao, Junjie Hu and Steven P. Dow},
+  author={Sun, Lu and Tao, Stone and Hu, Junjie and Dow, Steven},
   booktitle = "Proceedings of The 26th ACM Conference on Computer-Supported Cooperative Work and Social Computing",
   year = "2023",
   publisher = "ACM",
@@ -12,7 +12,7 @@
 
 
 
-@inproceedings{rheeya2023,
+@inproceedings{gowtham2023,
   abbr = "ACL",
   title={Single Sequence Prediction over Reasoning Graphs for Multi-hop QA},
   author={Gowtham Ramesh, Makesh Narsimhan Sreedhar and Junjie Hu},
